--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         </div>
         <input id="handle" type="text" placeholder="Handle"/>
         <input id="message" type="text" placeholder="Message"/>
+        <input id="state" type="text" placeholder="Sate"/>
         <button id="send">Send</button>
       </div>
     </div>
