--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
         <input id="handle" type="text" placeholder="Handle"/>
         <input id="message" type="text" placeholder="Message"/>
         <input id="state" type="text" placeholder="Sate"/>
+        <label class="switch">
+            <input id="onoff" type="checkbox" value='OFF' onclick="toggle(this);">
+            <span class="slider round"></span>
+        </label>
         <button id="send">Send</button>
       </div>
     </div>
